// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayButton renders 1`] = `
<div>
  <button
    class="btn btn-primary"
    type="button"
  />
</div>
`;

exports[`ClayButton renders ButtonWithIcon 1`] = `
<div>
  <button
    aria-label="Delete"
    class="btn btn-monospaced btn-primary"
    type="button"
  >
    <svg
      class="lexicon-icon lexicon-icon-trash"
      role="presentation"
    >
      <use
        xlink:href="/some/path#trash"
      />
    </svg>
  </button>
</div>
`;

exports[`ClayButton renders ButtonWithIcon without monospaced 1`] = `
<div>
  <button
    aria-label="Delete"
    class="btn btn-primary"
    type="button"
  >
    <svg
      class="lexicon-icon lexicon-icon-trash"
      role="presentation"
    >
      <use
        xlink:href="/some/path#trash"
      />
    </svg>
  </button>
</div>
`;

exports[`ClayButton renders a ButtonGroup with spaced 1`] = `
<div>
  <div
    class="btn-group"
    role="group"
  >
    <div
      class="btn-group-item"
    >
      <button
        class="btn btn-primary"
        type="button"
      />
    </div>
    <div
      class="btn-group-item"
    >
      <button
        class="btn btn-primary"
        type="button"
      />
    </div>
  </div>
</div>
`;

exports[`ClayButton renders block 1`] = `
<div>
  <button
    class="btn btn-block btn-primary"
    type="button"
  />
</div>
`;

exports[`ClayButton renders borderless 1`] = `
<div>
  <button
    class="btn btn-outline-borderless btn-outline-primary"
    type="button"
  />
</div>
`;

exports[`ClayButton renders disabled 1`] = `
<div>
  <button
    class="btn btn-primary"
    disabled=""
    type="button"
  />
</div>
`;

exports[`ClayButton renders monospaced 1`] = `
<div>
  <button
    class="btn btn-monospaced btn-primary"
    type="button"
  />
</div>
`;

exports[`ClayButton renders outline 1`] = `
<div>
  <button
    class="btn btn-outline-primary"
    type="button"
  />
</div>
`;

exports[`ClayButton renders small 1`] = `
<div>
  <button
    class="btn btn-sm btn-primary"
    type="button"
  />
</div>
`;

exports[`ClayButton renders with a ButtonGroup 1`] = `
<div>
  <div
    class="btn-group"
    role="group"
  >
    <button
      class="btn btn-primary"
      type="button"
    />
  </div>
</div>
`;

exports[`ClayButton renders with a different display type 1`] = `
<div>
  <button
    class="btn btn-link"
    type="button"
  />
</div>
`;
